2003-07-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-copy-buffer): Fix the logical error installed by the
	last change at 2003-07-15.

2003-07-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el (shimbun-mainichi-content-start): Improve
	the value.
	(shimbun-mainichi-content-end): Ditto.

2003-07-15  OHASHI Akira  <bg66@koka-in.org>

	* shimbun/shimbun.el (shimbun-header-insert): Use LSDB records for
	choosing the author's X-Face.
	(shimbun-use-lsdb-for-x-face): New customize option. Users can set
	this to `never' to inhibit the use of LSDB.
	(toplevel): Attempt to load `lsdb' when compiling.

2003-07-15  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-image-only-page): Abolished.
	(w3m-show-error-information): Return nil.
	(w3m-create-text-page): Return 'text-page.
	(w3m-create-image-page): Return 'image-page.
	(w3m-create-page): Return 'external-view when `w3m-external-view'
	is called.
	(w3m-goto-url): Do not encode a given URL when it points a local
	page.  Bind `w3m-current-buffer' locally.  Follow the change of
	`w3m-create-page'.
	(w3m-copy-buffer): Wrap `w3m-goto-url' with
	`w3m-process-with-wait-handler', to avoid unexpected asynchronous
	processes.
	(w3m-region): Bind `w3m-current-buffer' locally.

	* w3m-util.el (w3m-url-local-p): Stricten its regexp.
	(w3m-url-dtree-p): Removed.

2003-07-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-tdiary.el (shimbun-replace-in-string): New function.
	(shimbun-tdiary-get-headers): Use it.

2003-07-14  OHASHI Akira  <bg66@koka-in.org>

	* shimbun/sb-tdiary.el: New backend.

	* shimbun/sb-chalow.el (shimbun-chalow-get-headers): Fix regexp.

2003-07-12  NOMIYA Masaru  <nomiya@ttmy.ne.jp>

	* shimbun/sb-zdnet.el (shimbun-zdnet-group-alist): Fix the folder
	name for `enterprise'.

	* shimbun/sb-mainichi.el (shimbun-mainichi-content-start): Exclude
	an advertisement.

2003-07-12  OHASHI Akira  <bg66@koka-in.org>

	* shimbun/sb-chalow.el: New backend.
